// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/stories/transferwise.test.ts host.currency = payee.currency != expense.currency = collective.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10098     | -113       | 11620                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1507                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -113       | -11507               | -10098                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1507                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11605     | -97        | 11605                | 11508                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1508                   |
| EXPENSE | Expense in EUR | DEBIT  | -11508    | -97        | -11508               | -11605                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1508                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency != collective.currency = host.currency 2`] = `
Object {
  "collectiveToHost": 1,
  "expenseToCollective": 1.1508,
  "expenseToHost": 1.1508,
  "expenseToPayoutMethod": 0.856064,
}
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10084     | -97        | 11604                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1507                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -97        | -11507               | -10084                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1507                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10084     | -84        | 10084                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -84        | -10000               | -10084                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11595     | -88        | 11595                | 11507                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1507                   |
| EXPENSE | Expense in EUR | DEBIT  | -11507    | -88        | -11507               | -11595                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1507                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10076     | -88        | 11594                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1507                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -88        | -11507               | -10076                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1507                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10113     | -113       | 10113                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -113       | -10000               | -10113                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;
